rnsc/test_data/integration/error/parser/type_hints/cp_idx/overflow.rns
.class public MainClass
.super @cp_idx 65536 ; explicit constant pool index
